--- a/internal/page.html
+++ b/internal/page.html
@@ -5,7 +5,7 @@
     <title>{{ .Title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-    <link type="text/css" rel="stylesheet" href="/assets/lissom.min.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/lissom.css" />
     <link type="text/css" rel="stylesheet" href="/assets/styles.css" />
     <link
       type="text/css"
